# promptc

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
examples/sample-plugin/: plugin.py  plugin.toml
scripts/: eval_route.py
src/interceptor/: __init__.py  __main__.py  cli.py  config.py  constants.py  core.py  health.py  mcp_server.py  template_loader.py  template_registry.py
src/interceptor/adapters/: __init__.py  base.py  claude.py  errors.py  gpt.py  models.py  prompt_extract.py  registry.py  selector.py  service.py  transport.py
tests/: conftest.py  test_adapter_models.py  test_adapter_service.py  test_anti_patterns_hotfix.py  test_assembler.py  test_audit_main.py  test_audit_search.py  test_audit_validators.py  test_backend_cli.py  test_backend_health.py  test_backend_registry.py  test_backend_selector.py  test_budget_allocator.py  test_claude_adapter.py  test_cli.py  test_cli_route.py  test_cli_templates.py  test_compilation_cache.py  test_compilation_models.py  test_compile_cli.py  test_compressor.py  test_config.py  test_core.py  test_gpt_adapter.py  test_health.py  test_mcp_server.py  test_pr10_stream.py  test_pr11_validation.py  test_pr12_gates.py  test_pr13_retry.py  test_pr14_logging.py  test_pr15_metrics.py  test_pr16_log_prune.py  test_pr17_log_rotate.py  test_pr18_log_search.py  test_pr19_logs_period_views.py  test_pr20_plugin_discovery.py  test_pr21_plugin_runtime.py  test_pr22_plugin_compile_integration.py  test_pr23_plugin_routing_integration.py  (+25 more)
tests/eval/: README.md  baseline_v1.3.1.json  corpus.jsonl
(+48 files in other folders)
