[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-compiler"
version = "1.1.0"
description = "Universal CLI Prompt Compiler — elite prompt engineering, automatically"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mycli = "interceptor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interceptor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["interceptor"]

[tool.coverage.report]
show_missing = true
fail_under = 90
